--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "font-awesome": "^4.7.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
+    "vue-google-autocomplete": "^1.1.3",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
